--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "rnaget_client"}]
 python = "^3.10"
 
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.2.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
