--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,17 @@ packages = [{include = "rnaget_client"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+requests = "^2.28.2"
 
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.2.2"
+scriv = {extras = ["toml"], version = "^1.2.1"}
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.2.2"
+pytest-mock = "^3.10.0"
 
 [build-system]
 requires = ["poetry-core"]
