--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "rnaget_client"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-requests = "2.*"
+requests = "^2"
 
 
 [tool.poetry.group.dev.dependencies]
